--- a/lab1/index.html
+++ b/lab1/index.html
@@ -7,8 +7,7 @@
 	<!-- (2) Notice how you can use the left angle bracket, exclamation and dashes to break the code and leave comments here, 
 	across multiple lines, even, but always make sure to close with two dashes and right angle bracket -->
 	
-	
-	<title>Quick Start - Leaflet</title>
+	<title>Ivanna</title>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +27,7 @@
 
 
 <!-- (5) a "div" is a division of the code; you're basically telling the browser to make a container here, size 600 by 400 -->
-<div id="mapid" style="width: 800px; height: 600px;"></div>
+<div id="mapid" style="width: 800px; height: 800px;"></div>
 
 <script>
 //(6) when you are outside of the head and outside of functions, you can use just two slashes to leave single-line comments like this and you don't need to close
@@ -43,29 +42,32 @@
 	
 	
 	var mymap = L.map('mapid').setView([41.79116133977498, -87.59823778348704], 16);
-	L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-		maxZoom: 19,
-		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors '
-	}).addTo(mymap);
+	L.tileLayer('https://tiles.stadiamaps.com/tiles/alidade_smooth/{z}/{x}/{y}{r}.{ext}', {
+			minZoom: 0,
+			maxZoom: 20,
+			attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+			ext: 'png'
+		}).addTo(mymap);
 //(10) right above here, you see you're adding this tileset and setting the max zoom level of "mymap" 
 
 //(11) this is how you define individual features on the map - a marker, a cirlce, a polygon. You could also call up a variable and point it to a hosted GIS file to load it in.
 //(12) note that each popup has preloaded text here. You could also have a variable that points attributes in a dataset to populate a popup; we will do this in the future
-	L.marker([41.78690767353724, -87.60065026886691]).addTo(mymap)
+	L.marker([41.79048682438437, -87.6028970939514]).addTo(mymap)
 		.bindPopup("<b>Hello world!</b><br />I open automatically.").openPopup();
 
-	L.circle([41.79233783592511, -87.60574835117913], 200, {
+	L.circle([41.79195771590357, -87.60084930335644], 200, {
 		color: 'green',
 		fillColor: '#f03',
 		fillOpacity: 0.5
-	}).addTo(mymap).bindPopup("I am a circle.");
+	}).addTo(mymap).bindPopup("this is also a library!");
 	//(13)notice that, with leaflet, you can set the color of the outline by using major color names, as well as the fill color with hex codes
 
 
 	L.polygon([
 		[41.79027895349174, -87.59867779654374],
 		[41.79150071588047, -87.59644738553216],
-		[41.79001876034581, -87.59778259756630]
+		[41.79001876034581, -87.59778259756630],
+		[41.79126869547848, -87.59421580677437]
 	]).addTo(mymap).bindPopup("I am a polygon.");
 	//(14)three nodes - the above code is drawing is a triangle... you can add more nodes to the polygon by separating each with a comma
 
@@ -73,7 +75,7 @@
 	var popup = L.popup();
 
 	//(16) this variable is a GeoJSON file! But it's not yet added to the map. Can you figure out why, and fix it? And no, it's not the order of the coordinates!
-		var walker303 = {
+	var walker303 = {
     "type": "Feature",
     "properties": {
         "name": "Love Library",
@@ -85,6 +87,8 @@
         "coordinates": [-87.59870347936963, 41.789036606405276]
     }
 };
+
+	L.geoJSON(walker303).addTo(mymap);
 
 //(17) you can also comment out mapped items if you do not want them to draw. note that the var reference above is still present but below i have turned off a layer
 //	L.geoJSON(walker303,{}).addTo(mymap);
