--- a/lab1/index.html
+++ b/lab1/index.html
@@ -27,7 +27,7 @@
 
 
 <!-- (5) a "div" is a division of the code; you're basically telling the browser to make a container here, size 600 by 400 -->
-<div id="mapid" style="width: 800px; height: 800px;"></div>
+<div id="mapid" style="width: 1000px; height: 800px;"></div>
 
 <script>
 //(6) when you are outside of the head and outside of functions, you can use just two slashes to leave single-line comments like this and you don't need to close
@@ -42,12 +42,10 @@
 	
 	
 	var mymap = L.map('mapid').setView([41.79116133977498, -87.59823778348704], 16);
-	L.tileLayer('https://tiles.stadiamaps.com/tiles/alidade_smooth/{z}/{x}/{y}{r}.{ext}', {
-			minZoom: 0,
-			maxZoom: 20,
-			attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-			ext: 'png'
-		}).addTo(mymap);
+	L.tileLayer('https://tileserver.memomaps.de/tilegen/{z}/{x}/{y}.png', {
+		maxZoom: 18,
+		attribution: 'Map <a href="https://memomaps.de/">memomaps.de</a> <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+	}).addTo(mymap);
 //(10) right above here, you see you're adding this tileset and setting the max zoom level of "mymap" 
 
 //(11) this is how you define individual features on the map - a marker, a cirlce, a polygon. You could also call up a variable and point it to a hosted GIS file to load it in.
