--- a/lab2/index.html
+++ b/lab2/index.html
@@ -22,11 +22,12 @@
     </head>
 
     <body>
-        <div id="map" style="width: 1000px; height: 800px;"> 
+        <div id="map"> 
 
         </div>
 
         <script type="text/javascript">
+            
             var map = L.map('map', {
                 center: [34.666, 104.9569],
                 zoom: 5
