--- a/lab2/index.html
+++ b/lab2/index.html
@@ -32,13 +32,26 @@
                 center: [34.666, 104.9569],
                 zoom: 5
             });
+
             L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/tonerlite/{z}/{x}/{ y }{ r }.{ ext }', 
-            {attribution: 'Map tiles by <a href="http://stamen.com">StamenDesign</a >, <a href="http://creativecommons.org/licenses/by/3.0">CC BY3.0</a> & mdash; Map data & copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-            subdomains: 'abcd',
-            minZoom: 0,
-            maxZoom: 20,
-            ext: 'png'
-        }).addTo(map);
+            {
+                attribution: 'Map tiles by <a href="http://stamen.com">StamenDesign</a >, <a href="http://creativecommons.org/licenses/by/3.0">CC BY3.0</a> & mdash; Map data & copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+                subdomains: 'abcd',
+                minZoom: 0,
+                maxZoom: 20,
+                ext: 'png'
+            }).addTo(map);
+
+            var imagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{ z }/{ y }/{ x }',
+            {
+                attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR- EGP, and the GIS User Community'
+            });
+
+            var lightTerrain = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Terrain_Base/MapServer/tile/{ z }/{ y }/{ x }',
+            {
+                attribution: 'Tiles &copy; Esri &mdash; Source: USGS, Esri, TANA, DeLorme, and NPS',
+                maxZoom: 13
+            }).addTo(map); // to use as default base map that loads up
 
         </script>
     
