--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,8 +3,13 @@
 
     <head>
         <title>Assignment 2</title>
+
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" crossorigin="" />
         <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" crossorigin=""></script>
+        
+        <!-- import javascript geojson vars -->
+        <script src="https://ivannarodriguez.github.io/lab2/provinces.js"></script>
+        <script src="https://electionmaps.github.io/coviddata.js"></script>
 
         <style type="text/css">
             html,
@@ -52,6 +57,23 @@
                 attribution: 'Tiles &copy; Esri &mdash; Source: USGS, Esri, TANA, DeLorme, and NPS',
                 maxZoom: 13
             }).addTo(map); // to use as default base map that loads up
+
+            // adding polygons and pins from geojsons imported in <head>
+            var provinces = L.geoJson(provinces).addTo(map);
+            var covidData = L.geoJson(covidData).addTo(map);
+
+            // adding map controls to toggle between layers
+            var basemaps = {
+                "Terrain": lightTerrain,
+                "Satellite": imagery
+            };
+
+            var overlaymaps = {
+                "China Provinces": provinces
+            }
+
+            L.control.layers(basemaps, overlaymaps, 
+            {collapsed: false}).addTo(map);
 
         </script>
     
