--- a/lab2/index.html
+++ b/lab2/index.html
@@ -58,9 +58,28 @@
                 maxZoom: 13
             }).addTo(map); // to use as default base map that loads up
 
+            // functions to change color of population bins on map
+            function getColor(value) {
+                    return value > 50000000 ? '#54278f' :
+                        value > 25000000 ? '#756bb1' :
+                            value > 10000000 ? '#9e9ac8' :
+                                value > 5000000 ? '#cbc9e2' :
+                                    '#f2f0f7';
+                };
+            
+            function style(feature) {
+                    return {
+                        fillColor: getColor(feature.properties.POP10),
+                        color: 'white',
+                        weight: 1,
+                        opacity: 1,
+                        fillOpacity: 0.9
+                    };
+                };
+
             // adding polygons and pins from geojsons imported in <head>
-            var provinces = L.geoJson(provinces).addTo(map);
-            var covidData = L.geoJson(covidData).addTo(map);
+            var provinces = L.geoJson(provinces, {style:style}).addTo(map);
+            var covidData = new L.geoJson(covidData).addTo(map);
 
             // adding map controls to toggle between layers
             var basemaps = {
