--- a/lab2/index.html
+++ b/lab2/index.html
@@ -57,14 +57,13 @@
                 attribution: 'Tiles &copy; Esri &mdash; Source: USGS, Esri, TANA, DeLorme, and NPS',
                 maxZoom: 13
             }).addTo(map); // to use as default base map that loads up
-
-            // functions to change color of population bins on map
+            
             function getColor(value) {
-                    return value > 50000000 ? '#54278f' :
-                        value > 25000000 ? '#756bb1' :
-                            value > 10000000 ? '#9e9ac8' :
-                                value > 5000000 ? '#cbc9e2' :
-                                    '#f2f0f7';
+                    return value > 50000000 ? '#4B5563' :  // Blueish Grayish
+                        value > 25000000 ? '#718096' :     // Blueish Grayish
+                            value > 10000000 ? '#A0AEC0' :     // Blueish Grayish
+                                value > 5000000 ? '#CBD5E0' :      // Blueish Grayish
+                                    '#E2E8F0';                         // Blueish Grayish
                 };
             
             function style(feature) {
@@ -88,14 +87,33 @@
                 return 0.9 * Math.pow(val/minValue, .7) * minRadius;
             }
 
+            var onEachFeature = function (feature, layer) {
+                    if (feature.properties) {
+                        var prop = feature.properties;
+                        // make an html popup with properties
+                        //see how you can concatenate various attributes and text as needed,
+                        //including HTML markup, with single quotes. You pull out properties by
+                        //typing in prop and then putting the field in brackets.
+                        //you can do this because prop = feature.properties._____
+                        var popup = '<h3>' + prop['Location'] + '</h3>' + '<br> Cases on Day 1: ' + prop['1'] + ' <br> Cases on Day 16: ' + prop['covid'];
+                        // add known info about event to the description
+
+                        // you must create a layer property on each feature or else
+                        // the search results wont know where the item is on the map / layer
+                        feature.layer = layer;
+                        layer.bindPopup(popup, { maxWidth: 300 });
+                    }
+                }; // end onEachFeature
+
             var covidData = new L.geoJson(covidData, {
+                onEachFeature: onEachFeature,
                 pointToLayer: function(feature, ll){
                     return L.circleMarker(ll, {
-                        color: '#000000',
+                        color: false,
                         opacity: 1,
                         weight: 2,
-                        fillColor: '#808080',
-                        fillOpacity: .5,
+                        fillColor: '#800000',
+                        fillOpacity: .4,
                         radius: calcRadius(feature.properties.covid) 
 
                     });
