--- a/lab3/index.html
+++ b/lab3/index.html
@@ -29,7 +29,7 @@
   <script>
       var map = L.map('map').setView([41.795037908202374, -87.59230399335593], 14.0);
       
-      L.tileLayer('/{z}/{x}/{y}.png', {
+      L.tileLayer('https://ivannarodriguez.github.io/lab3/{z}/{x}/{y}.png', {
         minZoom: 13,
         maxZoom: 15,
         tms: false,
