--- a/lab3/index.html
+++ b/lab3/index.html
@@ -38,7 +38,9 @@
 
       // var bus = new L.geoJson(bus).addTo(map);
 
-      var busIconUrl = 'https://upload.wikimedia.org/wikipedia/commons/e/e6/Bus-logo.svg';
+      // var busIconUrl = 'https://upload.wikimedia.org/wikipedia/commons/e/e6/Bus-logo.svg';
+
+      var busIconUrl = 'https://ivannarodriguez.github.io/lab3/bus.svg';
 
       var busIcon = L.icon({
         iconUrl: busIconUrl, // path to the bus icon image (PNG or SVG)
