--- a/index.html
+++ b/index.html
@@ -10,13 +10,68 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Lux Bootswatch theme -->
     <link href="styles/bootstrap.css" rel="stylesheet">
+    <!-- Custom CSS for theme overrides -->
+    <style>
+        /* overriding css variables */
+        :root {
+            /* set a linear gradient background */
+            --bs-body-bg: linear-gradient(to right, #ffb3ba, #ece6ff, #ffffb7);
+        }
+
+        /* other custom styles */
+        body {
+            /* apply the gradient as the background of the body */
+            background: var(--bs-body-bg);
+            /* set background size to cover to avoid any issue with gradient stretch */
+            background-size: cover;
+            /* make sure the gradient covers the entire page */
+            margin: 0;
+        }
+
+        /* apply gradient background to the navbar */
+        .navbar {
+            background: var(--bs-body-bg);
+            background-size: cover;
+            /* remove the default background color */
+            background-color: transparent;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">Ivanna Rodríguez</a>
+
+            <!-- navbar toggler -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- navbar links -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main content area -->
+    <div class="container pt-5 text-center">
         <h1>Ivanna Rodríguez</h1>
         <p>Site in progress...</p>
-        <!-- Add your HTML content here -->
+        
     </div>
 
     <!-- Bootstrap JS and dependencies -->
