removed gradient background

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         /* overriding css variables */
         :root {
             /* set a linear gradient background */
-            --bs-body-bg: linear-gradient(to right, #ffb3ba, #ece6ff, #ffffb7);
+            /* --bs-body-bg: linear-gradient(to right, #ffb3ba, #ece6ff, #ffffb7); */
+            --bs-body-bg: #C3C8CC;
         }
 
         /* other custom styles */
