--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
             /* remove the default background color */
             background-color: transparent;
         }
+        
+        p {
+            padding-left: 100px; /* Increase the left padding */
+            padding-right: 100px; /* Increase the right padding */
+        }
+
+        a:hover {
+            color: #FA8072; /* Salmon color for hover state */
+        }
     </style>
 </head>
 
@@ -70,9 +79,9 @@
 
     <!-- Main content area -->
     <div class="container pt-5 text-center">
-        <h1>Ivanna Rodríguez</h1>
-        <p>Site in progress...</p>
-        
+        <h1>Hello, I'm Ivanna.</h1>
+        <p>I'm a graduate student in <a href="https://capp.uchicago.edu/">Computer Science and Public Policy</a> at UChicago, and a full-stack data scientist using analytics to encourage inclusive and sustainable socioeconomic devleopment.</p>
+        <p>site in progress...</p>
     </div>
 
     <!-- Bootstrap JS and dependencies -->
