--- a/index.html
+++ b/index.html
@@ -5,51 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Site Title</title>
-    <!-- Bootstrap CSS -->
+    <title>Ivanna Rodríguez</title>
+    <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Lux Bootswatch theme -->
+    <!-- lux bootswatch theme -->
     <link href="styles/bootstrap.css" rel="stylesheet">
-    <!-- Custom CSS for theme overrides -->
+    <!-- custom css -->
     <style>
-        /* overriding css variables */
         :root {
             /* set a linear gradient background */
             /* --bs-body-bg: linear-gradient(to right, #ffb3ba, #ece6ff, #ffffb7); */
             --bs-body-bg: #C3C8CC;
         }
 
-        /* other custom styles */
         body {
-            /* apply the gradient as the background of the body */
             background: var(--bs-body-bg);
-            /* set background size to cover to avoid any issue with gradient stretch */
+            /* set background size to cover to avoid any issue with gradient stretch- cover entire page */
             background-size: cover;
-            /* make sure the gradient covers the entire page */
             margin: 0;
         }
 
-        /* apply gradient background to the navbar */
         .navbar {
             background: var(--bs-body-bg);
             background-size: cover;
-            /* remove the default background color */
             background-color: transparent;
         }
         
         p {
-            padding-left: 100px; /* Increase the left padding */
-            padding-right: 100px; /* Increase the right padding */
+            padding-left: 100px; 
+            padding-right: 100px; 
         }
 
         a:hover {
-            color: #FA8072; /* Salmon color for hover state */
+            color: #FA8072;
         }
     </style>
 </head>
 
 <body>
-    <!-- Navbar -->
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">Ivanna Rodríguez</a>
@@ -77,16 +71,42 @@
         </div>
     </nav>
 
-    <!-- Main content area -->
+    <!-- main  -->
     <div class="container pt-5 text-center">
-        <h1>Hello, I'm Ivanna.</h1>
-        <p>I'm a graduate student in <a href="https://capp.uchicago.edu/">Computer Science and Public Policy</a> at UChicago, and a full-stack data scientist using analytics to encourage inclusive and sustainable socioeconomic devleopment.</p>
+        <h1 id="typed-heading"></h1>
+        <p>I'm a graduate student in <a href="https://capp.uchicago.edu/" target="_blank">Computer Science and Public Policy</a> at UChicago, and a full-stack data scientist using analytics to encourage inclusive and sustainable socioeconomic devleopment.</p>
         <p>site in progress...</p>
     </div>
 
-    <!-- Bootstrap JS and dependencies -->
+    <!-- bootstrap js and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
+    <!-- custom JavaScript -->
+    <script>
+        // Function to type text letter by letter 
+            function typeText(element, text, speed) {
+                let index = 0;
+                const type = () => {
+                    if (index < text.length) {
+                        element.textContent += text[index];
+                        index++;
+                        setTimeout(type, speed);
+                    } 
+                };
+                type();
+            }
+
+            // Set up the typed effect on the h1 element with ID 'typed-heading'
+            const headingElement = document.getElementById('typed-heading');
+            const headingText = "Hello, I'm Ivanna.";
+            const typingSpeed = 100; 
+
+            // Start typing when the DOM is fully loaded
+            document.addEventListener('DOMContentLoaded', function () {
+                typeText(headingElement, headingText, typingSpeed);
+            });
+    </script>
 </body>
 
 </html>
