added image and alt desc

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- main  -->
     <div class="container pt-5 text-center">
         <!-- Circular image -->
-        <img src="img/photo.jpg" alt="Your image description" class="circular-img">
+        <img src="img/photo.jpg" alt="A black and white profile picture displaying a woman sipping on coffee" class="circular-img">
     
         <!-- Heading -->
         <h1 id="typed-heading"></h1>
