--- a/index.html
+++ b/index.html
@@ -55,6 +55,42 @@
             margin: 0 auto 20px;
         }
 
+        /* to display the salmon box overlays for the projects section */
+        .grid-item {
+            position: relative;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(250, 128, 114, 0.7); /* Salmon color with opacity */
+            color: #ffffff;
+            opacity: 0; /* Initially hidden */
+            transition: opacity 0.3s; /* Smooth transition */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .grid-item:hover .overlay {
+            opacity: 1; /* Show overlay on hover */
+        }
+
+        .overlay-content {
+            color: white; /* Text color */
+            font-size: 18px; /* Text size */
+            font-weight: bold; /* Text weight */
+            padding: 10px; /* Padding around text */
+        }
+
+        .grid-item img {
+            width: 100%;
+            height: auto;
+        }
+
     </style>
 </head>
 
@@ -103,15 +139,40 @@
             Science and Public Policy</a> at the University of Chicago.</p> 
             
         <p>I currently work as a Research Engineer in the Department of Ecology & 
-            Evolution with <a href="https://eegraduate.uchicago.edu/faculty/luis-bettencourt-phd">
-            Luis Betterncourt's</a> Urban Science Lab where we use information theory methods to study 
-            spatial inequality within cities.</p>
+            Evolution with <a href="https://eegraduate.uchicago.edu/faculty/luis-bettencourt-phd" target="_blank">
+            Luis Bettencourt's</a> Urban Science Lab, where we use information theory methods to study 
+            inequality within cities.</p>
     </div>
 
     <!-- projects section -->
     <div id="projects" class="container pt-5 text-center">
         <h4>Projects</h4>
         <p>In progress...</p>
+            <!-- <div class="row">
+                <div class="col-md-4">
+                    <div class="grid-item">
+                        <a href="project1.html">
+                            <img src="project1_image.jpg" alt="Project 1" class="img-fluid">
+                            <div class="overlay">Project 1 Title</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="grid-item">
+                        <a href="project2.html">
+                            <img src="project2_image.jpg" alt="Project 2" class="img-fluid">
+                            <div class="overlay">Project 2 Title</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="grid-item">
+                        <a href="project3.html">
+                            <img src="project3_image.jpg" alt="Project 3" class="img-fluid">
+                            <div class="overlay">Project 3 Title</div>
+                        </a>
+                    </div> 
+                </div> -->
     </div>
 
     <!-- Connect section -->
