add centroids src

--- a/lab7/index.html
+++ b/lab7/index.html
@@ -87,7 +87,7 @@
             timelineControl.addTimelines(timeline);
         }
     </script>
-    <script src="https://ivannar.github.io/lab7/final_centroids.jsonp"></script>
+    <script src="/lab7/final_centroids.jsonp"></script>
 
 </body>
 
