added full path for jsonp

--- a/lab7/index.html
+++ b/lab7/index.html
@@ -102,7 +102,7 @@
             timelineControl.addTimelines(timeline);
         }
     </script>
-    <script src="lab7/final_centroids.jsonp"></script>
+    <script src="https://ivannarodriguez.github.io/lab7/final_centroids.jsonp"></script>
 
 </body>
 
