--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         /* to display the salmon box overlays for the projects section */
         .grid-item {
             position: relative;
+            margin-bottom: 30px; 
         }
 
         .overlay {
